@@ -250,12 +250,6 @@ static int camd35_send_ecm(struct ts *ts, uint16_t ca_id, uint16_t service_id, u
 	c->buf[18] = 0xff;
 	c->buf[19] = 0xff;
 
-	// OSCAM do not like it if ECM's are comming too fast
-	// It thinks they are part of a single packet and ignores
-	// the data at the end. The usleep() is a hack but works
-	if (ts->packet_delay)
-		usleep(ts->packet_delay);
-
 	int ret = camd35_send_buf(ts, to_send);
 	if (ret <= 0) {
 		ts_LOGf("ERR | Error sending ecm packet, reconnecting to camd.\n");
@@ -289,12 +283,6 @@ static int camd35_send_emm(struct ts *ts, uint16_t ca_id, uint8_t *data, uint8_t
 	c->buf[0] = 0x06; // CMD incomming EMM
 	init_2b(ca_id  , c->buf + 10);
 	init_4b(prov_id, c->buf + 12);
-
-	// OSCAM do not like it if EMM's are comming too fast
-	// It thinks they are part of a single packet and ignores
-	// the data at the end. The usleep() is a hack but works
-	if (ts->packet_delay)
-		usleep(ts->packet_delay);
 
 	int ret = camd35_send_buf(ts, to_send);
 	if (ret < 0) {
