@@ -120,11 +120,6 @@ Set CAMD user name. The default is \fBuser\fR.
 \fB\-P\fR, \fB\-\-camd\-pass\fR <password>
 Set CAMD user password. The default is \fBpass\fR.
 .TP
-\fB\-y\fR, \fB\-\-camd\-pkt\-delay\fR <usec>
-Sleep <usec> microseconds between sending ECM/EMM packets to CAMD. This
-is workaround for camd35 OSCAM protocol processing. The default sleep time
-is \fB0\fR (workaround is disabled).
-.TP
 .SH EMM OPTIONS
 .PP
 .TP
